# table_project

./: .gitignore  CLAUDE.md  Makefile
_bmad/: config.toml
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1cc5f6af6b47_add_users_table.py  2e7d2c4c9f10_expand_srs_cards_with_fsrs_reviews.py  37b2d3c18a56_merge_vocabulary_and_undo_heads.py  3a8f6e5d9c12_add_undo_support_to_srs_reviews.py  5c2e3a4f9b11_add_srs_cards_table.py  6c09355b7a98_baseline.py  7b1d5f4c2a10_add_data_exports_table.py  7f8e9d1a2b3c_add_collection_term_uniqueness.py  8b2c4d6e7f80_create_diagnostic_insights_tables.py  9f2d4b7c6a11_add_vocabulary_tables.py  b8d0a9c4e271_add_diagnostic_signal_columns_to_srs_reviews.py  c2f7a9d4b6e1_create_collections_tables.py  fa8a61335426_add_source_column_to_vocabulary_terms.py  fd8f2d8f4f73_add_user_preferences_table.py
backend/scripts/: seed_corpus.py
backend/src/app/: main.py
backend/src/app/core/: config.py  dependencies.py  exceptions.py  logging.py  middleware.py  security.py
backend/src/app/db/: session.py
backend/src/app/llm/: __init__.py  cache.py  cost_tracker.py  gateway.py  schemas.py
backend/src/table_project_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py
backend/tests/e2e/: test_auth_flow.py  test_data_privacy_flow.py  test_srs_queue_flow.py
backend/tests/integration/: test_database_connection.py
backend/tests/unit/: test_arq_settings.py  test_health.py
(+302 files in other folders)
